# oscar

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README  TODO  readme.md
cmake/: FindCPPCMS.cmake  FindCairo.cmake  FindMarble.cmake  add_buildtype_lto.cmake  add_buildtype_sanitize_debug.cmake  add_buildtype_ultra.cmake  add_buildtype_ultra_sanitize.cmake  preload-lto-gcc-4.9.cmake  preload-lto-gcc.cmake  setup-lto.cmake
data/: .gitignore
data/configs/db/: keysValuesToInflate.txt
data/configs/oscar-create/: common.json  geocell.json  geocell_mg4j.json  geocell_prefix.json  (+55 more)
data/poi_words/: additional.txt  de.xml  de_special_phrases.txt  en.xml  en_special_phrases.txt  extract.py  fetch.sh  itemsSavedByKeyValues.txt  tagstore.phrases
docker/ubuntu/: Dockerfile
liboscar/: AdvancedCellOpTree.cpp  AdvancedCellOpTree.h  CMakeLists.txt  CQRDilator.cpp  CQRDilator.h  CQRFromComplexSpatialQuery.cpp  CQRFromComplexSpatialQuery.h  CQRFromPolygon.cpp  CQRFromPolygon.h  CellOpTree.cpp  CellOpTree.h  CellTextCompleter.cpp  CellTextCompleter.h  CompleterStaticOsm.h  GeoSearch.cpp  GeoSearch.h  OscarItemPayload.cpp  OscarItemPayload.h  OsmIdType.h  OsmKeyValueObjectStore.cpp  OsmKeyValueObjectStore.h  SetOpTreePrivateGeo.cpp  SetOpTreePrivateGeo.h  StaticOsmCompleter.cpp  StaticOsmCompleter.h  StaticOsmItemSet.h  StaticTagStore.cpp  StaticTagStore.h  TextSearch.cpp  TextSearch.h  constants.cpp  constants.h  tagcompleters.cpp  tagcompleters.h
oscar-cmd/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  CairoRenderer.cpp  CairoRenderer.h  CompletionStringCreators.cpp  CompletionStringCreators.h  Config.cpp  Config.h  ConsistencyCheckers.cpp  ConsistencyCheckers.h  DecelledACOT.cpp  DecelledACOT.h  GeoHierarchyPrinter.cpp  GeoHierarchyPrinter.h  LiveCompleter.cpp  LiveCompleter.h  Workfunctions.cpp  Workfunctions.h  oscarmain.cpp
oscar-create/: AreaExtractor.cpp  AreaExtractor.h  BoundariesInfo.h  CMakeLists.txt  CellCreator.cpp  CellCreator.h  CellTextCompleter.cpp  CellTextCompleter.h  Config.cpp  Config.h  NodeTable.cpp  NodeTable.h  OOMCellTextCompleter.h  OsmKeyValueObjectStore.cpp  OsmKeyValueObjectStore.h  OsmPolygonStore.h  ScoreCreator.cpp  ScoreCreator.h  State.h  TagStore.cpp  TagStore.h  TextSearchTraits.cpp  TextSearchTraits.h  common.h  createcells.cpp  helpers.cpp  helpers.h  oscarcreate.cpp  readwritefuncs.cpp  readwritefuncs.h  sampleConfig.json  types.cpp  types.h
oscar-gui/: CMakeLists.txt  CompletionDispatcher.cpp  CompletionDispatcher.h  GeometryInputWidget.cpp  GeometryInputWidget.h  ItemDetailsWidget.cpp  ItemDetailsWidget.h  ItemIndexTableModel.cpp  ItemIndexTableModel.h  MainWindow.cpp  MainWindow.h  MarbleMap.cpp  MarbleMap.h  OscarQtMainWindow.cpp  OscarQtMainWindow.h  ResultsTableModel.cpp  ResultsTableModel.h  SearchGeometryHelper.cpp  SearchGeometryHelper.h  SearchGeometryModel.cpp  SearchGeometryModel.h  SearchInputWidget.cpp  SearchInputWidget.h  SearchResultsWidget.cpp  SearchResultsWidget.h  SearchTab.h  SemaphoreLocker.h  SidebarWidget.cpp  SidebarWidget.h  StateHandlers.cpp  StateHandlers.h  States.cpp  States.h  SubSetModel.cpp  SubSetModel.h  SubSetNodeFlattener.cpp  SubSetNodeFlattener.h  VisualizationOptionsWidget.cpp  VisualizationOptionsWidget.h  main.cpp
oscar-web/: BinaryWriter.cpp  BinaryWriter.h  CMakeLists.txt  CQRCompleter.cpp  CQRCompleter.h  CellQueryResultsSerializer.cpp  CellQueryResultsSerializer.h  GeoHierarchySubSet.xml  GeoHierarchySubSetSerializer.cpp  GeoHierarchySubSetSerializer.h  IndexDB.cpp  IndexDB.h  ItemDB.cpp  ItemDB.h  MainHandler.cpp  MainHandler.h  oscar-web.xml  oscarweb.cpp  todo.txt  types.h
oscar-web/www/public_html/: index.html  unittest.html
oscar-web/www/public_html/css/: MarkerCluster.Default.css  leaflet-sidebar.css  loadingspinner.css  style.css
oscar-web/www/public_html/js/libs/: main.js
oscar-web/www/public_html/js/libs/config/: config.js  config.min.js
oscar-web/www/public_html/js/libs/connection/: manager.js  manager.min.js
oscar-web/www/public_html/js/libs/dagre-d3/: dagre-d3.min.js
oscar-web/www/public_html/js/libs/flickr/: flickr.js  flickr.min.js
oscar-web/www/public_html/js/libs/fuelux/css/: fuelux-dev.css  fuelux-dev.css.map
oscar-web/www/public_html/js/libs/jbinary/: jbinary.js.map  src
oscar-web/www/public_html/js/libs/jdataview/: jdataview.js.map  src
oscar-web/www/public_html/js/libs/jquery/: jquery.min.js
oscar-web/www/public_html/js/libs/jquery-ui/: jquery-ui.css  jquery-ui.min.css
oscar-web/www/public_html/js/libs/jqueryui/: jquery-ui.css  jquery-ui.js  jquery-ui.min.css  jquery-ui.min.js  jquery-ui.structure.css  jquery-ui.structure.min.css
oscar-web/www/public_html/js/libs/leaflet/: leaflet-sidebar.js  leaflet-sidebar.min.js  leaflet.css  leaflet.markercluster-src.js  leaflet.markercluster.min.js
oscar-web/www/public_html/js/libs/map/: map.js
oscar-web/www/public_html/js/libs/menu/: menu.js  menu.min.js
oscar-web/www/public_html/js/libs/oscar/: oscar.js  oscarMapInteraction.js
oscar-web/www/public_html/js/libs/polygonMerger/: polygonMerger.js
oscar-web/www/public_html/js/libs/prototype/: prototype.js
oscar-web/www/public_html/js/libs/query/: query.js
oscar-web/www/public_html/js/libs/search/: search.js
oscar-web/www/public_html/js/libs/spin/: spin.min.js  spinner.js
oscar-web/www/public_html/js/libs/sserialize/: sserialize.js  sserialize.min.js
oscar-web/www/public_html/js/libs/state/: manager.js
oscar-web/www/public_html/js/libs/switch-button/: jquery.switchButton.js  jquery.switchButton.min.js
oscar-web/www/public_html/js/libs/tokenfield/: bootstrap-tokenfield.js  bootstrap-tokenfield.min.js
oscar-web/www/public_html/js/libs/tools/: tools.js
oscar-web/www/public_html/js/libs/tree/: tree.js
oscar-web/www/public_html/js/libs/twitter-bootstrap/css/: bootstrap.css
oscar-web/www/public_html/js/libs/twitter-bootstrap/js/: bootstrap.min.js
oscar-web/www/public_html/template/: help.html  itemListEntryTemplate.mst  spatialQueryTableRowTemplate.mst  treeTemplate.mst
reference/: .gitignore
scripts/: bench.sh  create_kvs.py
(+24 files in other folders)
